--- a/style.css
+++ b/style.css
@@ -80,6 +80,8 @@ nav ul li{
 .songItem img{
   width: 40px;
   margin: 0 20px;
+  border-radius: 12px;
+  height: 40px;
 }
 .songItemContainer{
     margin-top: 40px;
@@ -94,4 +96,8 @@ nav ul li{
     position: absolute;
     left: 10vw;
     font-family: 'Varela Round', sans-serif;
+}
+.songInfo img{
+    opacity: 0;
+    transition: opacity 0.5s ease-in;
 }
