--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ nav ul li{
    align-items: center;
    justify-content: space-between;
    color: black;
+   width: 130%;
    margin: 14px 0;
    border-radius: 30px;
 }
